--- a/staging.yml
+++ b/staging.yml
@@ -63,6 +63,8 @@ jobs:
       trigger: true
   - task: bosh-upload-stemcell-from-cf-deployment
     file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+    params:
+      BBL_STATE_DIR: staging
 
 - name: bosh-deploy-cf
   plan:
