Example of private state repo structure

--- a/staging.yml
+++ b/staging.yml
@@ -15,6 +15,9 @@ resources:
     branch: master
     uri: git@github.com:cloudfoundry/infrastructure-ci-bbl-states.git
     private_key: {{github_private_key}}
+  # bbl-state-dir/
+  #   staging/
+  #   production/
 
 - name: cf-deployment-concourse-tasks
   type: git
