--- a/concourse.yml
+++ b/concourse.yml
@@ -62,10 +62,12 @@ jobs:
     - get: bbl-state
       passed: [bbl-up]
       trigger: true
-  - task: bosh-upload-stemcell-from-cf-deployment
-    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-concourse-deployment/task.yml
+  - task: bosh-upload-stemcell
+    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
     params:
       BBL_STATE_DIR: concourse
+    input_mapping:
+      cf-deployment: concourse-deployment
 
 - name: bosh-deploy-concourse
   plan:
